# python-puddle

./: .gitignore  .pyirc  README.md  pyproject.toml
puddles/: Installing-pywin32.md  readme.md
puddles/examples/: custom_head.py  example_run_thrice.py  mix_run.py  run_callbacks.py  run_foo.py  run_func.py  run_func_nowait.py  run_mix_two.py  unit_cores.py
puddles/puddles/: head.py  metakey.py  raw.py  shadow.py  shadow_tests.py
puddles/scratch/: d.py  pooler.py
src/: requirements-dev.txt  requirements.txt
src/puddles/: __init__.py  cpu.py  extras.py  ram.py  raw.py  run.py
v1/: b.py  c.py  extras.py  generic.py  notes.md
v2/: extras.py  head.py  metakey.py  raw.py  run.py  shadow.py
v2/foo/bar/: __init__.py
