[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puddles"
version = "0.1.0"
description = "multiprocessing Pools and Processes."
authors = [{name = "Strangemother", email = "puddles@strangemother.com"}]
license =  {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["multiprocessing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}
# dynamic = ["version"]

# Optional: If you have any package data or scripts to include
# [tool.setuptools]
# packages = { find = { include = ["src"] } }

# [tool.setuptools]
# packages = ["src/porthouse"]

# [tool.setuptools.packages.find]
# where = ["src"]  # the package is in src/toto/ now

# include_package_data = true
# scripts = [
    # Scripts to include
# ]

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

# [project.scripts]
# porthouse = "porthouse.cli:run"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/